--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div><br>
 
     <form>
-        <label for='rock'> <input type='radio' id='rock' name='playerchoice' value='rock'>Rock</label>
-        <label for='paper'><input type='radio' id='paper' name='playerchoice' value='paper'>Paper</label>
-        <label for='scissor'><input type='radio' id='scissor' name='playerchoice' value='scissor'>Scissor</label>
+        <label for='rock'><img src='rock.png'><input type='radio' id='rock' name='playerchoice' value='rock'>Rock</label>
+        <label for='paper'><img src='../assets/paper2.png'><input type='radio' id='paper' name='playerchoice' value='paper'>Paper</label>
+        <label for='scissor'><img src='../assets/scissors.png'><input type='radio' id='scissor' name='playerchoice' value='scissor'>Scissor</label>
     </form>
     <button type='button' id='playbutton'>Play RPS</button>
     <div id='displayresults'></div>
