--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <form>
         <label for='rock'><img src='rock.png'><input type='radio' id='rock' name='playerchoice' value='rock'>Rock</label>
-        <label for='paper'><img src='../assets/paper2.png'><input type='radio' id='paper' name='playerchoice' value='paper'>Paper</label>
-        <label for='scissor'><img src='../assets/scissors.png'><input type='radio' id='scissor' name='playerchoice' value='scissor'>Scissor</label>
+        <label for='paper'><img src='./assets/paper2.png'><input type='radio' id='paper' name='playerchoice' value='paper'>Paper</label>
+        <label for='scissor'><img src='./assets/scissors.png'><input type='radio' id='scissor' name='playerchoice' value='scissor'>Scissor</label>
     </form>
     <button type='button' id='playbutton'>Play RPS</button>
     <div id='displayresults'></div>
